@@ -2,10 +2,9 @@ package ti4.helpers;
 
 import java.awt.Point;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
-public class Constants {
+public final class Constants {
     // Staff Pings
     public static final String chassitId = "183213554445320192";
     public static final String eronousId = "465241936408608769";
@@ -16,7 +15,7 @@ public class Constants {
     public static final String gedsDeadId = "586504147746947090";
     public static final String sigmaId = "214326507458396161";
     public static final String bambamId = "487030345812672523";
-    public static final List<String> honoraryJazz = Arrays.asList("1153503280706625606", tspId);
+    public static final List<String> honoraryJazz = List.of("1153503280706625606", tspId);
     public static final String jabberwockyId = "455013002953883651";
     public static final String solaxId = "380689512621277185";
 
@@ -204,6 +203,7 @@ public class Constants {
     public static final String SETTING_TYPE = "setting_type";
 
     public static final String TOKEN_INGRESS = "token_ingress.png";
+    public static final String TOKEN_EGRESS = "token_egress.png";
     public static final String TOKEN_BREACH_ACTIVE = "token_breachActive.png";
     public static final String TOKEN_BREACH_INACTIVE = "token_breachInactive.png";
     public static final String TOKEN_SEVERED = "token_severed.png";
@@ -441,6 +441,7 @@ public class Constants {
     public static final String LIZHO_REVEAL_TRAP = "lizho_reveal_trap";
     public static final String LIZHO_SWAP_TRAP = "lizho_swap_trap";
     public static final String STELLAR_CONVERTER = "stellar_converter";
+    public static final String EXPEDITION_WIN_RATES = "expedition_win_rates";
     public static final String SEND_DEBT = "send_debt";
     public static final String DEBT_COUNT = "debt_count";
     public static final String REMOVE_DEBT = "remove_debt";
@@ -463,6 +464,7 @@ public class Constants {
     public static final String ADD_CC_TO_FS = "mahact_cc_to_fs";
     public static final String REMOVE_CC_FROM_FS = "mahact_cc_from_fs";
     public static final String SPECIAL = "special";
+    public static final String BOUNTIES = "bounties";
     public static final String FOW = "fow";
     public static final String FOW_SYSTEMS = "fow_systems";
     public static final String FOG_FILTER = "fog_filter";
@@ -520,6 +522,7 @@ public class Constants {
     public static final String CURRENT_ACDRAWSTATUS_INFO = "current_acdrawstatus_info";
     public static final String AGENDA_VOTE_INFO = "agenda_vote_info";
     public static final String CHECK_REACTS_INFO = "check_reacts_info";
+    public static final String PLAYER_STORED_VALUES = "player_stored_values";
     public static final String THALNOS_UNITS = "thalnos_units";
     public static final String DISPLACED_UNITS_SYSTEM = "displaced_units_system";
     public static final String DISPLACED_UNITS_ACTIVATION = "displaced_units_activation";
@@ -650,6 +653,7 @@ public class Constants {
     public static final String SEND_TG = "send_tg";
     public static final String SEND_COMMODITIES = "send_commodities";
     public static final String SETUP = "setup";
+    public static final String SETUP_STARTING_FLEET = "setup_starting_fleet";
     public static final String WEIRD_GAME_SETUP = "weird_game_setup";
     public static final String GALACTIC_EVENTS_SETUP = "galactic_events_setup";
     public static final String CUSTOMIZATION = "customization";
@@ -900,6 +904,7 @@ public class Constants {
     public static final String PICK_AC_FROM_DISCARD = "pick_from_discard";
     public static final String PICK_AC_FROM_PURGED = "pick_from_purged";
     public static final String SHUFFLE_AC_BACK_INTO_DECK = "shuffle_back_into_deck";
+    public static final String SHUFFLE_AC_FROM_HAND = "shuffle_from_hand";
     public static final String REVEAL_AND_PUT_AC_INTO_DISCARD = "reveal_and_put_into_discard";
     public static final String SEND_AC = "send";
     public static final String SEND_AC_RANDOM = "send_random";
@@ -1229,13 +1234,8 @@ public class Constants {
     public static final String VERBOSITY_VERBOSE = "verbose";
     private static final String VERBOSITY_AVERAGE = "average";
     private static final String VERBOSITY_MINIMAL = "minimal";
-    public static final List<String> VERBOSITY_OPTIONS = new ArrayList<>();
-
-    static {
-        VERBOSITY_OPTIONS.add(VERBOSITY_VERBOSE);
-        VERBOSITY_OPTIONS.add(VERBOSITY_AVERAGE);
-        VERBOSITY_OPTIONS.add(VERBOSITY_MINIMAL);
-    }
+    public static final List<String> VERBOSITY_OPTIONS =
+            List.of(VERBOSITY_VERBOSE, VERBOSITY_AVERAGE, VERBOSITY_MINIMAL);
 
     public static final String BETA_TEST_MODE = "beta_test_mode";
     public static final String CC_LIMIT = "cc_limit";
@@ -1292,6 +1292,8 @@ public class Constants {
     public static final String PATH_TOKEN_COUNT = "path_token_count";
     public static final String HONOR_COUNT = "honor_count";
     public static final String DISHONOR_COUNT = "dishonor_count";
+    public static final String STEELBALANCE_COUNT = "steelbalance_count";
+    public static final String STARBALANCE_COUNT = "starbalance_count";
     public static final String HARVEST_COUNT = "harvest_count";
     public static final String GLEDGE_CORE_PNG = "token_ds_gledgecore.png";
     public static final String DS_COMMAND = "ds";
@@ -1330,9 +1332,11 @@ public class Constants {
     public static final String REPLACEMENT_MADE = "replacement_made";
     public static final String AVERAGE_TURN_TIME = "average_turn_time";
     public static final String DICE_LUCK = "dice_luck";
+    public static final String HITS_PER_TURN = "hits_per_turn";
     public static final String LIFETIME_RECORD = "lifetime_record";
     public static final String FACTION_RECORD_OF_TECH = "faction_record_of_tech";
     public static final String FACTION_RECORD_OF_SCPICK = "faction_record_of_scpick";
+    public static final String FACTION_TOP_COLORS = "faction_top_colors";
     public static final String SPENDS = "spends";
     public static final String TOP_LIMIT = "top_limit";
     public static final String MINIMUM_NUMBER_OF_TURNS = "minimum_number_of_turns";
@@ -1356,6 +1360,7 @@ public class Constants {
     public static final String OBSERVER = "observer";
     public static final String REMOVE_TITLE = "remove_title";
     public static final String EDIT_TRACK_RECORD = "edit_track_record";
+    public static final String SET_GAME_LIMIT = "set_game_limit";
     public static final String SET_STATS_TRACKED_USER = "set_stats_tracked_user";
     public static final String TITLE = "title";
     public static final String ADD_REMOVE = "add_remove";
@@ -1499,6 +1504,7 @@ public class Constants {
     public static final String REFRESH_UNIT_INFO = "refreshUnitInfo";
     public static final String REFRESH_ALL_UNIT_INFO = "refreshUnitInfoAll";
     public static final String REFRESH_TECH_INFO = "refreshTechInfo";
+    public static final String REFRESH_BREAKTHROUGH_INFO = "refreshBreakthroughInfo";
     public static final String REFRESH_PLANET_INFO = "refreshPlanetInfo";
     public static final String SERVER_GAME_STATS = "server_game_stats";
     public static final String START_COMBAT = "start_combat";
@@ -1523,6 +1529,7 @@ public class Constants {
     public static final String TIGL_NICKNAME = "nickname";
     public static final String TIGL_FRACTURED_TAG = "TIGL Fractured";
     public static final String IS_FRACTURED = "is_fractured";
+    public static final String SHOW_GAME_IDS = "show_game_ids";
     public static final String SEARCH_NAMES = "search_names";
     public static final String SEARCH_TAGS = "search_tags";
     public static final String SEARCH_USERS = "search_users";
